IDEA-390215 [java] SafeDelete for external annotations doesn't work as expected
GitOrigin-RevId: 3ff550d46ae70e610dca3f3072109cfe6df4cc11